[metadata]
name = molpack
description = New generation initial configurations for molecular dynamics simulations
long_description = file: README.md
long_description_content_type = text/markdown
author = Li Jichen, Wang Zhuofeng
author_email = lijichen365@gmail.com
license = MIT
platforms = any
# url = https://github.com/diegoferigo/cmake-build-extension/tree/master/example
# project_urls =
#     Source  = https://github.com/diegoferigo/cmake-build-extension/tree/master/examples/swig
#     Tracker = https://github.com/diegoferigo/cmake-build-extension/issues
keywords = Modelling, Molecular Dynamics, Initial Configurations
classifiers =

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    numpy
    # This requirement is only necessary if the build_extension_env
    # context manager is used in the top-level __init__.py
    cmake-build-extension

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-icdiff
all =
    %(test)s

[tool:pytest]
addopts = -rsxX -v
testpaths = tests